# mensa-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: api.rs  display.rs  ingredients.rs  lib.rs  main.rs  meal.rs  style.rs
