[package]
name = "mensa"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = "0.4"
html-escape = "0.2"
libc = "0.2"
thiserror = "2.0.18"


[lints.clippy]
pedantic = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
future_not_send = "allow"
unwrap_used = "deny"
missing_const_for_fn = "deny"
enum_glob_use = "deny"
match-wild-err-arm = "warn"
